--- a/src/main/resources/static/css/lib/sidebar.css
+++ b/src/main/resources/static/css/lib/sidebar.css
@@ -172,7 +172,7 @@ html.rtl .sidebar .nano-content > ul > li > ul > li > a {
 .sidebar .nano-content > ul > li > ul > li.active > a,
 .sidebar .nano-content > ul > li > ul > li.open > a,
 .sidebar .nano-content > ul > li > ul > li > ul {
-    background: #242634;
+    background: #ffffff;
 }
 
 .sidebar .nano-content > ul > li > ul > li > ul > li.label,
