--- a/src/main/resources/templates/page-login.html
+++ b/src/main/resources/templates/page-login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -21,11 +21,11 @@
     <link rel="apple-touch-icon" sizes="57x57" href="http://placehold.it/57.png/000/fff">
 	
 	<!-- Styles -->
-    <link href="assets/css/lib/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/lib/themify-icons.css" rel="stylesheet">
-    <link href="assets/css/lib/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/lib/simdahs.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link th:href="@{css/lib/font-awesome.min.css}" rel="stylesheet">
+    <link th:href="@{css/lib/themify-icons.css}" rel="stylesheet">
+    <link th:href="@{css/lib/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{css/lib/simdahs.css}" rel="stylesheet">
+    <link th:href="@{css/style.css}" rel="stylesheet">
 </head>
 
 <body class="bg-primary">
@@ -36,27 +36,27 @@
 				<div class="col-lg-6 col-lg-offset-3">
 					<div class="login-content">
 						<div class="login-logo">
-							<a href="index.html"><span>小康</span></a>
+							<a th:href="@{index}"><span>小康</span></a>
 						</div>
 						<div class="login-form">
 							<h4>登录</h4>
-							<form>
+							<form th:action="@{/login}">
 								<div class="form-group">
 									<label>电子邮箱</label>
-									<input type="email" class="form-control">
+									<input type="email" name="user-email" class="form-control">
 								</div>
 								<div class="form-group">
 									<label>密码</label>
-									<input type="password" class="form-control">
+									<input type="password" name="password" class="form-control">
 								</div>
 								<div class="checkbox">
 									<label>
 										<input type="checkbox"> 记住我
 									</label>
 									<label class="pull-right">
-										<a href="page-reset-password.html">忘记密码？</a>
+										<a th:href="@{page-reset-password}">忘记密码？</a>
 									</label>
-									
+									<p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
 								</div>
 								<button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">登陆</button>
 								<div class="social-login-content">
@@ -66,7 +66,7 @@
 									</div>
 								</div>
 								<div class="register-link m-t-15 text-center">
-									<p>还没有账号? <a href="page-register.html">在这里注册</a></p>
+									<p>还没有账号? <a th:href="@{page-register}">在这里注册</a></p>
 								</div>
 							</form>
 						</div>
