--- a/src/main/resources/templates/page-reset-password.html
+++ b/src/main/resources/templates/page-reset-password.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -21,11 +21,11 @@
     <link rel="apple-touch-icon" sizes="57x57" href="http://placehold.it/57.png/000/fff">
 	
 	<!-- Styles -->
-    <link href="assets/css/lib/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/lib/themify-icons.css" rel="stylesheet">
-    <link href="assets/css/lib/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/lib/simdahs.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link th:href="@{css/lib/font-awesome.min.css}" rel="stylesheet">
+    <link th:href="@{css/lib/themify-icons.css}" rel="stylesheet">
+    <link th:href="@{css/lib/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{css/lib/simdahs.css}" rel="stylesheet">
+    <link th:href="@{css/style.css}" rel="stylesheet">
 </head>
 
 <body class="bg-primary">
@@ -36,7 +36,7 @@
 				<div class="col-lg-6 col-lg-offset-3">
 					<div class="login-content">
 						<div class="login-logo">
-							<a href="index.html"><span>小康</span></a>
+							<a th:href="@{index}"><span>小康</span></a>
 						</div>
 						<div class="login-form">
 							<h4>重设密码</h4>
@@ -47,7 +47,7 @@
 								</div>
 								<button type="submit" class="btn btn-primary btn-flat m-b-15">提交</button>
 								<div class="register-link text-center">
-									<p>回到<a href="index.html">主页</a></p>
+									<p>回到<a th:href="@{index}">主页</a></p>
 								</div>
 							</form>
 						</div>
