查询功能实现

--- a/src/main/resources/templates/page-reset-password.html
+++ b/src/main/resources/templates/page-reset-password.html
@@ -40,11 +40,23 @@
 						</div>
 						<div class="login-form">
 							<h4>重设密码</h4>
-							<form>
+							<form th:action="@{/resetpwd}">
+								<p style="color: red" th:text="${session.resetmsg}" th:if="${not #strings.isEmpty(session.resetmsg)}"></p>
 								<div class="form-group">
 									<label>电子邮箱</label>
-									<input type="email" class="form-control">
+									<input name="user-email" type="email" class="form-control">
 								</div>
+
+								<div class="form-group">
+									<label>原密码</label>
+									<input name="user-pwd" type="password" class="form-control" >
+								</div>
+
+								<div class="form-group">
+									<label>新密码</label>
+									<input name="user-pwds" type="password" class="form-control" >
+								</div>
+
 								<button type="submit" class="btn btn-primary btn-flat m-b-15">提交</button>
 								<div class="register-link text-center">
 									<p>回到<a th:href="@{index}">主页</a></p>
